# lichess-bot

./: .gitignore  .gitmodules  README.md  config.yml  lichess_bot.py  pyproject.toml
engines/: chessy_start
