[tool.poetry]
name = "lichess-bot"
version = "0.1.0"
description = ""
authors = ["put author here"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chess = "1.10.0"
pyyaml = "6.0.1"
requests = "2.31.0"
backoff = "2.2.1"
rich = "13.6.0"

[tool.poetry.scripts]
lichessbot = "lichess_bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
